--- a/index.html
+++ b/index.html
@@ -4,12 +4,108 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <style src="script.js"></style>
+    <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+    <script src="script.js" defer></script>
     <title>Resume</title>
 </head>
-<body>
-    <div class="first">
-        <p>Initial Commit</p>
+<body class="bg-dark">
+    <!-- Header -->
+    <div id="name" class="container header bg-body">
+        <img class="profile-pic" src="profile.jpg" alt="Face of a Bastard">
+        <h1 class="name">Albin Josh M. Mosawan</h1>
+    </div>
+
+    <!-- Tabs -->
+    <div class="container tabs">
+        <button id="defaultOpen" class="tablinks" onclick="openContent(event, 'about')">About Me</button>
+        <button class="tablinks" onclick="openContent(event, 'education')">Education</button>
+        <button class="tablinks" onclick="openContent(event, 'skills')">Skills</button>
+        <button class="tablinks" onclick="openContent(event, 'contact')">Contact Information</button>
+
+    </div>
+
+    <!-- About -->
+    <div id="about" class="container tabcontent bg-body">
+        <h2>About Me</h2>
+        <div>
+            <p>Hello there. I am Albin Josh Mosawan. i live in La Trinidad, Benguet. I am an IT student, major in Web Technology, in University of the Cordileras.</p>
+            <p>My current hobbies are playing video games, and that is all.</p>
+            <p>I live by this quote that I just made up: <i>"The early bird becomes the best Chicken Joy."</i></p>
+        </div>
+    </div>
+
+    <!-- Education -->
+    <div id="education" class="container tabcontent bg-body">
+        <div>
+            <h2>Education</h2>
+            <div class="padded">
+                <div>
+                    <h3>University of the Cordilleras</h3>
+                    <div>Bachelor of Science</div>
+                    <div>Information Technology - Web Development Track</div>
+                    <div>GPA: n/a</div>
+                </div>
+                <div><span class="text-primary">September 2020 - Present</span></div>
+            </div>
+            <div class="padded">
+                <div>
+                    <h3>Cordillera Regional Science High School</h3>
+                    <div>High School</div>
+                    <div>Latest Grade: 89</div>
+                </div>
+                <div><span class="text-primary">June 2014 - March 2020</span></div>
+            </div>
+            <div class="padded">
+                <div>
+                    <h3>Nazarene Learners Center</h3>
+                    <div>Elementary</div>
+                </div>
+                <div><span class="text-primary">June 2006 - March 2014</span></div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Skills -->
+    <div id="skills" class="container tabcontent bg-body">
+        <h2>Skils</h2>
+        <div>
+            <div class="padded">
+                <h3>Programming Languages</h3>
+                <ul>
+                    <li>Java</li>
+                    <li>C#</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                </ul>
+            </div>
+            <div class="padded">
+                <h3>Others</h3>
+                <ul>
+                    <li>Use of Microsoft Applications (Word, Excel, Publisher, etc.)</li>
+                    <li>Video Editing Skills</li>
+                    <li>Photo Editing Skills</li>
+                    <li>Critical Thinker</li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+    <!-- Contact Info -->
+    <div id="contact" class="container tabcontent bg-body">
+        <h2>Contact Information</h2>
+        <div class="padded">
+            <ul class="no-list">
+                <li>
+                    <a href="https://github.com/albinagain" target="_blank"><i class="fab fa-github fa-4x"></i></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/amosawan/" target="_blank"><i class="fab fa-facebook fa-4x"></i></a>
+                </li>
+            </ul>
+
+            
+        </div>
     </div>
 </body>
 </html>
