--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="script.js" defer></script>
-    <title>Resume</title>
+    <title>Albin's Portfolio</title>
 </head>
 <body class="bg-dark">
     <!-- Header -->
     <div id="name" class="container header bg-body">
         <img class="profile-pic" src="profile.jpg" alt="Face of a Bastard">
-        <h1 class="name">Albin Josh M. Mosawan</h1>
+        <div class="name">
+            <h1>Albin Josh M. Mosawan</h1>
+        </div>
+        
     </div>
 
     <!-- Tabs -->
