added works tab

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <img class="profile-pic" src="profile.jpg" alt="Face of a Bastard">
         <div class="name">
             <h1>Albin Josh M. Mosawan</h1>
+            <p><i>a person</i></p>
         </div>
         
     </div>
@@ -24,6 +25,7 @@
         <button id="defaultOpen" class="tablinks" onclick="openContent(event, 'about')">About Me</button>
         <button class="tablinks" onclick="openContent(event, 'education')">Education</button>
         <button class="tablinks" onclick="openContent(event, 'skills')">Skills</button>
+        <button class="tablinks" onclick="openContent(event, 'works')">Works</button>
         <button class="tablinks" onclick="openContent(event, 'contact')">Contact Information</button>
 
     </div>
@@ -94,6 +96,32 @@
         </div>
     </div>
 
+    <!-- Works -->
+    <div id="works" class="container tabcontent bg-body">
+        <h2>Works</h2>
+        <div>
+            <div class="padded">
+                <ul class="no-list">
+                    <li>
+                        <a href="https://albinagain.github.io/Resume/" target="_blank">Old Resume Page</a>
+                    </li>
+                    <li>
+                        <a href="https://albinagain.github.io/Tribute-Page/" target="_blank">Tribute Page</a>
+                    </li>
+                    <li>
+                        <a href="https://albinagain.github.io/Survey/" target="_blank">Survey Page</a>
+                    </li>
+                    <li>
+                        <a href="https://albinagain.github.io/Product-Landing/" target="_blank">Product Landing Page</a>
+                    </li>
+                    <li>
+                        <a href="https://albinagain.github.io/technical-document/" target="_blank">Technical Document Page</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
     <!-- Contact Info -->
     <div id="contact" class="container tabcontent bg-body">
         <h2>Contact Information</h2>
@@ -106,8 +134,6 @@
                     <a href="https://www.facebook.com/amosawan/" target="_blank"><i class="fab fa-facebook fa-4x"></i></a>
                 </li>
             </ul>
-
-            
         </div>
     </div>
 </body>
