added good button and background

--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <script src="https://use.fontawesome.com/releases/v5.15.4/js/all.js" crossorigin="anonymous"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <script src="script.js" defer></script>
+    <link rel="icon" href="icon.png">
     <title>Albin's Portfolio</title>
 </head>
-<body class="bg-dark">
+<body class="bg-darker">
     <!-- Header -->
     <div id="name" class="container header bg-body">
         <img class="profile-pic" src="profile.jpg" alt="Face of a Bastard">
@@ -37,6 +38,9 @@
             <p>Hello there. I am Albin Josh Mosawan. i live in La Trinidad, Benguet. I am an IT student, major in Web Technology, in University of the Cordileras.</p>
             <p>My current hobbies are playing video games, and that is all.</p>
             <p>I live by this quote that I just made up: <i>"The early bird becomes the best Chicken Joy."</i></p>
+            <a href="really-good-page.html" target="_blank">
+                <button>A Really Good Button</button>
+            </a>
         </div>
     </div>
 
@@ -103,19 +107,44 @@
             <div class="padded">
                 <ul class="no-list">
                     <li>
-                        <a href="https://albinagain.github.io/Resume/" target="_blank">Old Resume Page</a>
+                        <a href="https://albinagain.github.io/Resume/" target="_blank">
+                            <div class="thumbnail">
+                                <iframe src="https://albinagain.github.io/Resume/" title="Old Resume"></iframe>
+                                <h5>Old Resume Page</h5>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <a href="https://albinagain.github.io/Tribute-Page/" target="_blank">Tribute Page</a>
+                        <a href="https://albinagain.github.io/Tribute-Page/" target="_blank">
+                            <div class="thumbnail">
+                                <iframe src="https://albinagain.github.io/Tribute-Page/" title="Tribute"></iframe>
+                                <h5>Tribute Page</h5>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <a href="https://albinagain.github.io/Survey/" target="_blank">Survey Page</a>
+                        <a href="https://albinagain.github.io/Survey/" target="_blank">
+                            <div class="thumbnail">
+                                <iframe src="https://albinagain.github.io/Survey/" title="Survey"></iframe>
+                                <h5>Survey Page</h5>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <a href="https://albinagain.github.io/Product-Landing/" target="_blank">Product Landing Page</a>
+                        <a href="https://albinagain.github.io/Product-Landing/" target="_blank">
+                            <div class="thumbnail">
+                                <iframe src="https://albinagain.github.io/Product-Landing/" title="Product Landing"></iframe>
+                                <h5>Product Landing Page</h5>
+                            </div>
+                        </a>
                     </li>
                     <li>
-                        <a href="https://albinagain.github.io/technical-document/" target="_blank">Technical Document Page</a>
+                        <a href="https://albinagain.github.io/technical-document/" target="_blank">
+                            <div class="thumbnail">
+                                <iframe src="https://albinagain.github.io/technical-document/" title="Technical Document"></iframe>
+                                <h5>Technical Document Page</h5>
+                            </div>
+                        </a>
                     </li>
                 </ul>
             </div>
